--- a/Voyage/index.html
+++ b/Voyage/index.html
@@ -14,7 +14,7 @@
         <h2><a href="#" class="logo">Voyage News Outlet</a></h2>
         <div class="navigation">
           <a href="#">Home</a>
-          <a href="#">Contact</a>
+          <a href="#">Our Team</a>
         </div>
       </header>
       <div class="content">
