LANDING page HTML

--- a/Voyage/index.html
+++ b/Voyage/index.html
@@ -11,7 +11,7 @@
 
     <section>
       <header>
-        <h2><a href="#" class="logo">Voyage News Outlet</a></h2>
+        <h2><a href="#" class="logo">Voyage News</a></h2>
         <div class="navigation">
           <a href="#">Home</a>
           <a href="#">Our Team</a>
