--- a/Voyage/voyage.html
+++ b/Voyage/voyage.html
@@ -18,7 +18,7 @@
 			<input type = "password" class = "inputting-text" placeholder = "Enter Password" name="usersPwd" required>
 			<input type = "checkbox" class = "check-box"><span>Remember Password</span>
         </br>
-        <a href="forgotindex.html" class="info-btn">Forgot Password</a>
+        <a href="../FORGOT PASSWORD/forgotindex.html" class="info-btn">Forgot Password</a>
         <button type = "submit" class = "submit-botton">Log In</button>
         </form>
 		<form id = "register" class = "input-text">
